fix: resolve offline icon text spilling and layout out of range bugs

--- a/assets/www/css/material-icons.css
+++ b/assets/www/css/material-icons.css
@@ -6,11 +6,10 @@
 }
 
 .material-icons-round {
-  font-family: 'Material Icons Round';
+  font-family: 'Material Icons Round' !important;
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;
-  line-clamp: 1;
+  font-size: 24px !important;
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -21,4 +20,8 @@
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  color: inherit;
 }
